Ensure that the +/- quantity buttons are the correct color in dark mode

--- a/src/components/ItemInCart/ItemInCart.css
+++ b/src/components/ItemInCart/ItemInCart.css
@@ -47,6 +47,7 @@ button.edit-quantity-button {
   padding: 0px 14px;
   margin: 0px;
   font-size: 28px;
+  background-color: #ffffff;
 }
 
 .delete-button {
