--- a/src/components/ItemPage/ItemPage.css
+++ b/src/components/ItemPage/ItemPage.css
@@ -53,6 +53,7 @@ button.edit-quantity-button {
   padding: 0px 14px;
   margin: 0px;
   font-size: 28px;
+  background-color: #ffffff;
 }
 
 .add-to-cart {
